# aimaze

./: .cursorrules  .flake8  Makefile  README.md  STATUS.md  env.test  pyproject.toml  requirements.txt
docs/: Checklist AiMaze - MVP.md  Plan Consolidado de Desarrollo del MVP_ AiMaze - La Mazmorra Generativa.md  Plan_avanzado_MVP_AiMaze.md  checklist_mvp.md  desarrollo.md  guia_deploy.md  guia_mvp.md  plan_mvp_revisado.md
scripts/: fix_markdown.sh  lint.sh
src/aimaze/: __main__.py  actions.py  ai_connector.py  characters.py  config.py  display.py  dungeon.py  events.py  events_generator.py  game_state.py  input.py  localization.py  main.py  player.py  quest_manager.py  save_load.py
src/aimaze/ai/: descriptions.py
src/aimaze/generation/: dungeon_generator.py
src/test/: test_config.py
tests/: test_actions_coordinates.py  test_display.py  test_dungeon_coordinates.py  test_dungeon_deterministic.py  test_game_state.py  test_player.py
