[project]
name = "aimaze"
version = "0.1.0"
description = "Juego de aventuras con IA"
authors = [
    { name = "Raul de la Cruz", email = "rpublico@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
