[project]
name = "aimaze"
version = "0.1.0"
description = "Juego de aventuras con IA"
authors = [
    { name = "Raul de la Cruz", email = "rpublico@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.25",
    "langfuse>=3.0.1",
    "openai>=1.86.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
