[project]
name = "aimaze"
version = "0.1.0"
description = "Juego de aventuras con IA"
authors = [
    { name = "Raul de la Cruz", email = "rpublico@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.23",
    "langfuse>=3.0.1",
    "numpy>=2.3.1",
    "openai>=1.86.0",
    "pydantic>=2.11.7",
    "pytest>=8.4.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

# Configuración de pymarkdownlnt
[tool.pymarkdownlnt]
# MD013: Límite de línea más razonable para documentación
plugins.md013.line_length = 100
# MD012: Permitir múltiples líneas en blanco consecutivas
plugins.md012.maximum = 2
# MD024: Permitir títulos duplicados en diferentes secciones
plugins.md024.allow_different_nesting = true
# MD004: Usar asterisco como estilo consistente para listas
plugins.md004.style = "asterisk"
# MD007: Indentación de listas más flexible
plugins.md007.indent = 2

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
]
